kub-24/ing-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-own-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basic-auth"
    nginx.ingress.kubernetes.io/auth-secret-type: "auth-file"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: kuback.d87.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-back
              servicePort: 80
  tls:
    - hosts:
        - kuback.d87.ru
      secretName: kuback-d87-ru-cert
